1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* preferences.c, main.c, config.c: add ability to use a custom
	format string for offset display.

1999-03-22  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (find_string_backward): fixed it a bit to
	prevent occasional segfaults, since a guint can't really be
	less than 0.
	* findreplace.c (find_prev_cb): start searching at gh->cursor_pos
	instead of gh->cursor_pos-1 to comply with the above changes.

1999-03-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (add_view_cb, cursor_moved_cb): new functions to
	display the cursor offset in the statusbar.
	(main): connect add_view_cb to MDI add_view signal.
	* ghex.h: declare offset_base.
	* preferences.c: add an option menu for selecting the base
	for cursor offset displaying (hex or decimal).
	* config.c: load and save offset base prefs.
	
1999-02-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): leave freeing stuff to
	destroy handler. thanx to Pavel Machek for reporting this.
	
1999-02-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): only create a new document
	if the file is a regular one (S_ISREG == 1).
	* gtkhex.c (recalc_displays, gtk_hex_size_request): use our own
	requisition instead of scrollbar's one for determining the size
	requested by the scrollbar in order to prevent GTK warnings.

1999-02-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (customize_app_cb, app_drop_cb): added DnD support to open
	files dragged to ghex.

1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* ghex.desktop: Added Korean translations.

1999-01-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c: Do not crash if we dont find the translation.

	* ghex.h (GROUP_MENU_PATH): Sync the string to the actual item we
	have on the menu. 

1999-01-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.[ch]: removed. contents moved to the following files: