@@ -1,3 +1,7 @@
+1999-03-25  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* help/C/index.html: make it consistent with the application ;)
+
 1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* preferences.c, main.c, config.c: add ability to use a custom
